--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,29 +1,14 @@
+// @import url('https://fonts.googleapis.com/css2?family=Milongap');
+// @import url('https://fonts.googleapis.com/css2?family=Kleymisska');
 //=================================================================================
-#myname {
-    font-size: x-large;
-font-family: 'Kleymisska';
-    transform: 'scale(1.24)';
-    // color: white;
-}
 
-//============================================================
-a {
-    text-decoration: none;
-    color: #343a40;
-
-    &.active {
-        color:orange;     
-    }
-}
-
-//-----------------------------------------------------------
 .titleProd {
     color: #3f51b5;
     text-align: center;
-    // text-shadow: 1px blue;
+    text-shadow: 1px blue;
     font-size: x-large;
     font-family: 'Kleymisska', 'Milonga';
-    font-weight: 590;
+    font-weight: 540;
 }
 
 //----------------------------------------------------------------
@@ -35,14 +20,13 @@ a {
     height: 50px;
     display: flex;
     align-items: center;
-    background-color: #343a40;
-    // #0f51b5;
+    background-color: #3f51b5;
     color: white;
-    font-weight: 550;
-    font-size: x-large;
+    font-weight: 600;
+    font-size: xx-large;
     padding: 10px;
     padding-left: 30%;
-    font-family: 'Kleymisska';
+    // box-shadow: 1px 1px 2px 2px #c5f6fa;
 }
 
 //---------------------------------------------------------------
@@ -89,16 +73,15 @@ svg.material-icons {
 //----------------------------------------------------------
 .myCart {
     flex-direction: column;
-    // color:black; 
-    // #0012ee;
+    color: #0012ee;
     text-decoration-line: none;
 }
 
 // ----------------------------------------------------------
 .theCartCol {
-    transform: scale(3.1);
+    transform: scale(2.7);
     position: fixed;
-    // color:blue;
+    color: blue;
     display: flex;
     flex-direction: column;
     margin-left: 140px;
@@ -114,7 +97,7 @@ svg.material-icons {
 }
 
 .deleteIcon {
-    color: 343a40;
+    color: #38d9a9;
 }
 
 .card-container {
@@ -145,13 +128,19 @@ svg.material-icons {
     justify-content: center;
     align-items: center;
     transition: all 0.1s ease-out;
-    box-shadow: 1px 1px 2px 1px #343a40;
-    //  #3f51b5;
+    box-shadow: 1px 1px 1px #343a40;
     display: flex;
     flex-direction: column;
 }
 
 // -----------------------------------------------------------
+.card:hover {
+    z-index: 3000;
+    transform: scale(1.34);
+    //  margin:50px;
+    box-shadow: 1px 1px 10px 2px #343a40;
+    //  #3f51b5;
+}
 
 //---------------------------------------------------------
 .imgClass {
@@ -163,7 +152,7 @@ svg.material-icons {
 }
 
 .go {
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 //------------------------------------------------------------------
@@ -174,14 +163,19 @@ svg.material-icons {
 
 //-----------------------------------------------------------------------
 .del {
-    background-color: #f60ebd;
+    background-color: #a61400;
     //  #c92a2a;
     color: white;
 }
 
+a {
+    text-decoration: none;
+    color: #343a40;
+}
+
 //-----------------------------------------------------------------
 .add {
-    background-color: #0ca678;
+    background-color: #343a40;
     color: white;
     //   black;
 }
