--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,8 +14,8 @@
           <button class="del btnadd"  
                  (click)="decItem(p)"> - </button>
          
-          <a routerLink='product/{{p.id}}'>
-            <span class="material-icons go">double_arrow</span> details 
+          <a routerLink='product/{{p.id}}' class ='go'>
+            <span class="material-icons">double_arrow</span> details 
           </a>
        </div>
         <!-- <span class="material-icons">cancel_presentation</span> -->
