--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,10 +1,10 @@
 .titleProd {
-    // color: #3f51b5;
+    color: #3f51b5;
     text-align: center;
     // text-shadow: 1px blue;
     font-size: large;
     font-family: 'Milonga';
-    // font-weight: 540;
+    font-weight: 400;
 }
 
 //---------------------------------------------------------------
@@ -20,19 +20,21 @@
     text-align: center;
     text-justify: newspaper;
     border-style: outset;
+    // background-color: rgba(255, 255, 250, 0.95);
+    box-shadow: 1px 1px 4px 15px rgba(250, 250, 255, 1);
 }
 
 //----------------------------------------------------------
 .content {
     font-family: 'Milonga';
     display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 800px;
+    margin: 50px auto 20px;
+    padding: 0 10px;
+    max-width: 1000px;
     flex-direction: column;
     align-items: center;
     font-family: 'Milonga';
-    font-weight: 650;
+    font-weight: 600;
     font-size: x-large;
     font-style: normal;
     text-align: center;
@@ -40,36 +42,11 @@
     border-style: outset;
 }
 
-//---------------------------------------------------
-#numberProd {
-    margin-top: 0px;
-    padding-top: 0px;
-}
-
-//----------------------------------------------------------
-.myCart {
-    flex-direction: column;
-    color: #0012ee;
-    text-decoration-line: none;
-}
-
 .deleteIcon {
     color: #38d9a9;
 }
 
-.card-container {
-    margin-left: 10%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 70px;
-    margin-top: 100px;
-}
-
-.card {
+.prods {
     // all: unset;
     // border-radius: 8px;
     border: 2px solid #0000;
@@ -84,12 +61,12 @@
     // flex-direction: row;
     justify-content: center;
     align-items: center;
-    transition: all 0.1s ease-out;
+    // transition: all 0.1s ease-out;
     box-shadow: 1px 1px 1px #343a40;
     display: flex;
     flex-direction: column;
     font-family: 'Milonga';
-    font-weight: 650;
+    font-weight: 550;
     font-size: x-large;
     font-style: normal;
     text-align: center;
@@ -98,11 +75,12 @@
 }
 
 // -----------------------------------------------------------
-.card:hover {
-    z-index: 3000;
-    transform: scale(1.11);
+.prods:hover {
+    // z-index: 3000;
+    // transform: scale(1.5);
     //  margin:50px;
-    box-shadow: 1px 1px 2px 3px #343a40;
+    // box-shadow: 1px 1px 2px 3px #343a40;
+    box-shadow: 0 0 2px 1px rgba(0, 140, 210, 0.6);
     //  #3f51b5;
 }
 
@@ -118,12 +96,13 @@
 //------------------------------------------------------------------
 .imgClass:hover {
     border-radius: 20px;
-    box-shadow: 0 0 2px 1px rgba(0, 140, 210, 0.6);
+    // box-shadow: 0 0 2px 1px rgba(0, 140, 210, 0.6);
 }
 
 //-----------------------------------------------------------------------
 .del {
-    background-color: #a61400;
+    background-color: rgba(210, 0, 190, 0.55);
+    //  rgba(240, 10, 80, 1);
     //  #c92a2a;
     color: white;
 }
@@ -135,18 +114,33 @@ a {
 
 //-----------------------------------------------------------------
 .add {
-    background-color: #343a40;
+    // box-shadow: 0 0 2px 1px rgba(0, 140, 210, 0.6);
+    background-color: rgba(0, 190, 210, 0.55);
+    // rgba(0, 245, 80, 1);
     color: white;
     //   black;
 }
 
+.amount {
+    opacity: 0.85;
+    //  font-weight: 500;
+    // font-size: x-large;
+}
+
+.price {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+
+}
+
 //---------------------------------------------------------------------
 .btnadd {
-    margin-left: 14px;
-    height: 40px;
-    width: 40px;
+    margin-left: 12px;
+    height: 30px;
+    width: 30px;
     border-radius: 20px;
-    font-weight: 500;
+    font-weight: 400;
     font-size: xx-large;
 }
 
@@ -157,7 +151,7 @@ a {
 
 //------------------------------------------------------------------------
 .btns {
-    margin: 14px;
+    margin: 10px;
     flex-direction: row;
     // margin-left:40px;
 }
@@ -169,4 +163,27 @@ h2 {
     padding: 5px;
 }
 
+p {
+    font-family: 'Milonga';
+    font-weight: 500;
+    font-size: large;
+    font-style: normal;
+    text-align: center;
+    text-justify: newspaper;
+}
+
 //--------------------------------------------------------------------------
+.shekel {
+    opacity: 0.5;
+    // margin-right: 22px;
+}
+
+.opac {
+    opacity: 0.8
+}
+
+.space {
+    // opacity: 0.75;
+    margin-right: 20px;
+    margin-left: 20px;
+}
