--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -48,12 +48,12 @@ svg.material-icons {
 
 //====================================================================
 .card {
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'Milonga';
     // all: unset;
     // border-radius: 8px;
-    border: 0px solid #eee;
-    background-color: #fafafa;
+    border: 0px solid rgb(61, 44, 44);
+    background-color: #afafa;
     // height: 700px;
     // width: 700px;
     max-width: max-content;
@@ -78,6 +78,7 @@ svg.material-icons {
 a {
     text-decoration: none;
 }
+
 // -----------------------------------------------------------
 .card:hover {
     // index: 1000;
@@ -133,5 +134,3 @@ h2 {
 }
 
 p {}
-
-//--------------------------------------------------------------------------
