--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -162,8 +162,8 @@ a {
 
 //-----------------------------------------------------------------
 .add {
-    background-color: rgba(0, 140, 210, 0.6);
-
+    // background-color: rgba(0, 140, 210, 0.6);
+background-color: rgba(4, 190, 100, 0.795);
     // color:#3f51b5;
     color: white;
     //   black;
