--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,10 +11,11 @@
 a {
     text-decoration: none;
 
-    color: rgba(120, 120, 120, 0.6);
+    color: rgba(110, 114, 110, 0.76);
 
     &.active {
-        color: rgba(0, 140, 210, 0.8);
+        color: #1f31b5; 
+        // color: rgba(0, 140, 210, 0.8);
         // #3f51b5;
     }
 }
@@ -33,14 +34,14 @@ a {
 .toolbar {
     // font-family: 'Kleymisska'; //, 'Milonga';
     position: absolute;
-    top: 0.8%;
+    top: 1%;
     // left: 0;
     // right: 0;
     width: 100%;
     height: 1%; // 50px;
     display: flex;
     align-items: center;
-    background-color: #3f51b5; // #343a40;
+    background-color: #1f31b5; // #343a40;
     // #0f51b5;
     color: white;
     font-weight: 400;
@@ -48,7 +49,7 @@ a {
     padding: 1%;
     padding-left: 30%;
     // font-family: 'Milonga';
-    box-shadow: 1px 1px 2px 2px lightblue;
+    box-shadow: 1px 1px 2px 3px lightblue;
 }
 
 //---------------------------------------------------------------
