--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -26,6 +26,7 @@
 
 //----------------------------------------------------------
 .content {
+    transform :scale(0.85);
     font-family: 'Milonga';
     display: flex;
     margin: 50px auto 20px;
@@ -47,7 +48,7 @@
 }
 
 .prods {
-    transform :scale(0.8);
+    // transform :scale(0.8);
     // all: unset;
     // border-radius: 8px;
     border: 2px solid #0000;
