--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -58,13 +58,6 @@ svg.material-icons {
 }
 
 //----------------------------------------------------
-.fav {
-    color: rgba(245, 170, 240);
-    //    #f783ac;
-    background-color: rgba(255, 255, 255, 0.2);
-    border: none;
-}
-
 //----------------------------------------------------------
 .myCart {
     flex-direction: column;
@@ -86,7 +79,7 @@ svg.material-icons {
 .card-container {
     //  margin-left: 10%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     // display: flex;
     // flex-wrap: wrap;
