i have added remove prod from cart button & some style changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="toolbar" role="banner">
+<div id="toolbar" role="banner">
   <h1 id="myname">
     Reham Abass - Welcome to my Angular14 app &copy; 2022 </h1>
   <a class="svgg" href="https://www.linkedin.com/in/rehamAbass/" target='_blank'>
