--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="flag === true">
+<div class="card"  *ngIf = "tryMe() === true">
         <h2 class='titleProd'> {{ p.title}}</h2>
         <h1 class='thePrice'> {{ p.price}}
           <img
