--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,5 @@ body {
 body {
      margin: 0;
      // font-family: 'Kleymisska', 'Milonga', Roboto, "Helvetica Neue", sans-serif;
-     background-color: #bbcbcb;
+     background-color: #b2cbcb;
 }
