--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 //=================================================================================
 #myname {
-    font-size: x-large;
+    font-size: larger;
     font-family: 'Milonga';
     // font-family: 'Kleymisska';
-    // transform: 'scale(1.24)';
+    transform: scale(0.74);
     // color: white;
 }
 
@@ -14,7 +14,7 @@ a {
     color: rgba(110, 114, 110, 0.76);
 
     &.active {
-        color: #1f31b5; 
+        color: #1f31b5;
         // color: rgba(0, 140, 210, 0.8);
         // #3f51b5;
     }
@@ -31,14 +31,14 @@ a {
 }
 
 //----------------------------------------------------------------
-.toolbar {
+#toolbar {
     // font-family: 'Kleymisska'; //, 'Milonga';
     position: absolute;
     top: 1%;
-    // left: 0;
-    // right: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    height: 1%; // 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     background-color: #1f31b5; // #343a40;
@@ -46,10 +46,10 @@ a {
     color: white;
     font-weight: 400;
     font-size: larger;
-    padding: 1%;
+    padding: 10px;
     padding-left: 30%;
     // font-family: 'Milonga';
-    box-shadow: 1px 1px 2px 3px lightblue;
+    box-shadow: 1px 1px 4px 2px rgba(10, 10, 10, 0.3);
 }
 
 //---------------------------------------------------------------
@@ -66,9 +66,9 @@ a {
 //----------------------------------------------------------
 .content {
     display: flex;
-    margin: 55px auto 25px;
-    padding: 0 16px;
-    max-width: 960px;
+    // margin: 55px auto 25px;
+    // padding: 0 16px;
+    // max-width: 960px;
     flex-direction: column;
     align-items: center;
 }
@@ -81,15 +81,15 @@ svg.material-icons {
 
 //---------------------------------------------------
 #numberProd {
-    margin-left: 88%;
-}
-
-//----------------------------------------------------
-.fav {
-    color: rgba(245, 170, 240);
-    //    #f783ac;
-    background-color: rgba(255, 255, 255, 0.2);
-    border: none;
+    transform: scale(0.7);
+    margin-left: 18%;
+    border-radius: 40%;
+    padding: 1px 4px;
+    color: rgb(15, 130, 232);
+    background-color: white;
+    font-family: 'Milonga';
+    font-weight: 400px;
+    font-size: small;
 }
 
 //----------------------------------------------------------
@@ -102,13 +102,13 @@ svg.material-icons {
 
 // ----------------------------------------------------------
 .theCartCol {
-    transform: scale(3);
+    transform: scale(2.4);
     position: fixed;
     // color:blue;
     display: flex;
     flex-direction: column;
-    margin-left: 5%; //140px;
-    margin-top: 4%; //220px;
+    margin-left: 4%; //140px;
+    margin-top: 3%; //220px;
     z-index: 2000;
     // background-color: rgba(10, 10, 10, 0.3);
     // text-shadow: 1px 1px 1px rgba(0, 200, 245,0.8);
