--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 html,
 body {
      height: 100%;
-  background-color:rgba(100,120,140,0.4);
+//   background-color:rgba(100,120,140,0.4);
 }
 
 body {
