--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,6 +43,7 @@
 
 //----------------------------------------------------------
 .content {
+  background-color:rgba(100,100,140,0.3);
     display: flex;
     margin: 82px auto 32px;
     padding: 0 16px;
