--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -35,7 +35,8 @@
 
 //----------------------------------------------------------
 .content {
-    transform: scale(0.7);
+   background-color:rgba(100,100,140,0.25);
+    transform: scale(0.96);
     // font-family: 'Milonga';
     display: flex;
     margin: 50px;
@@ -77,10 +78,11 @@
     // all: unset;
     // border-radius: 8px;
     border: 2px solid #0000;
-    background-color: #f8fafa;
+    background-color: #f4fafa;
     // width: max-content;
     // max-height: 400px;
-    // width: 400px;
+    width: 90%; 
+//       400px;
     // width: content;
     height: max-content;
     margin: 10px;
