--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -45,9 +45,10 @@
 .content {
   background-color:rgba(100,100,140,0.25);
     display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
+    margin: 50px;
+//       82px auto 32px;
+    padding: 10px;
+//     max-width: 960px;
     flex-direction: column;
     align-items: center;
 }
@@ -78,6 +79,7 @@ svg.material-icons {
 }
 
 .card-container {
+  
     margin-left: 10%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
