--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,11 +43,11 @@
 
 //----------------------------------------------------------
 .content {
-  background-color:rgba(100,100,140,0.25);
+  background-color:rgba(100,100,140,0.2);
     display: flex;
-    margin: 50px;
+//     margin: 50px;
 //       82px auto 32px;
-    padding: 10px;
+    padding: 50px;
 //     max-width: 960px;
     flex-direction: column;
     align-items: center;
