--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,8 @@
 #myname {
     font-size: larger;
     font-family: 'Milonga';
-    // font-family: 'Kleymisska';
-    transform: scale(0.74);
+    font-family: Kleymisska;
+    transform: scale(0.9);
     // color: white;
 }
 
