--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
 #myname {
     font-size: larger;
     font-family: 'Milonga';
-    font-family: 'Kleymisska';
+//     font-family: 'Kleymisska';
     transform: scale(0.9);
     // color: white;
 }
