--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
-// @import url('https://fonts.googleapis.com/css2?family=Milonga');
+@import url('https://fonts.googleapis.com/css2?family=Milonga');
 @import url('https://fonts.googleapis.com/css2?family=Kleymisska');
 
 //=================================================================================
 #myname {
-    font-size: larger;
+    font-size: large;
     font-family: 'Milonga';
 //     font-family: 'Kleymisska';
-    transform: scale(0.9);
+//     transform: scale(0.9);
     // color: white;
 }
 
@@ -44,14 +44,14 @@ a {
     height: 50px;
     display: flex;
     align-items: center;
-    background-color: #1f31b5; // #343a40;
+    background-color: #343a40;
     // #0f51b5;
     color: white;
     font-weight: 400;
     font-size: larger;
     padding: 10px;
     padding-left: 30%;
-    // font-family: 'Milonga';
+    font-family: 'Milonga';
     box-shadow: 1px 1px 4px 2px rgba(10, 10, 10, 0.3);
 }
 
