--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -62,7 +62,7 @@
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
 
-    color: rgba(100, 140, 150, 0.7);
+    color: rgba(50,50,50,0.7);
     // #07d9a9;
     margin-left: 80px;
     // align-content:right;
