--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,7 +62,7 @@ a {
 
 //----------------------------------------------------------
 .content {
-   background-color:rgba(100,100,140,0.25);
+//    background-color:rgba(100,100,140,0.25);
     display: flex;
     // margin: 55px auto 25px;
     // padding: 0 16px;
