--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -63,13 +63,13 @@
     border: 0px;
 
     color: black;
-    margin-left: 80px;
+//     margin-left: 80px;
     // align-content:right;
     // align-text:right;
     // float:right  ;
-    align-self: flex-end;
-    margin-right: 5px;
-    transform: scale(1.8);
+//     align-self: flex-end;
+//     margin-right: 5px;
+    transform: scale(1.4);
 }
 
 .prods {
