--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -59,17 +59,17 @@
 }
 
 #dell {
-//     background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     border: 0px;
 
     color: black;
-//     margin-left: 80px;
-    // align-content:right;
-    // align-text:right;
-    // float:right  ;
+    margin-left: 30px;
+    align-content:right;
+    align-text:right;
+    float:right  ;
 //     align-self: flex-end;
-//     margin-right: 5px;
-    transform: scale(1.4);
+    margin-right: 5px;
+//     transform: scale(1.4);
 }
 
 .prods {
