--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -127,9 +127,7 @@
 
 //-----------------------------------------------------------------------
 .del {
-    background-color: //
-        // rgba(220, 0, 150, 0.6);
-        rgba(140, 0, 60, 1);
+    background-color: rgba(240, 20, 50, 1);
     //  #c92a2a;
     color: white;
 }
