--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@ a {
     height: 50px;
     display: flex;
     align-items: center;
-    background-color: rgba(40,40,40,0.9);
+    background-color: black;
     color: white;
     font-weight: 400;
     font-size: larger;
