--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -35,7 +35,7 @@
 
 //----------------------------------------------------------
 .content {
-//    background-color:rgba(190,190,200,0.15);
+ background-color:rgba(10,10,20,0.7);
     transform: scale(0.82);
     // font-family: 'Milonga';
     display: flex;
